added order service, plus minor changes

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -46,6 +46,17 @@ services:
     depends_on:
       - consul-server
 
+  order-service:
+    image: order-service
+    build:
+      context: ./services/Order-Service
+      dockerfile: Dockerfile
+    tty: true
+    networks:
+      - static-network
+    depends_on:
+      - consul-server
+
   gateway:
     image: gateway
     build:
